--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "main": "pages/index.tsx",
   "dependencies": {
-    "@prisma/client": "3.15.2",
+    "@prisma/client": "^3.15.2",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
@@ -19,7 +19,6 @@
     "framer-motion": "^10.11.5",
     "next": "12.1.6",
     "postcss": "8.4.14",
-    "prisma": "3.15.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.32.2",
