--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "main": "pages/index.tsx",
   "dependencies": {
-    "@prisma/client": "^3.15.2",
+    "@prisma/client": "^4.11.0",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "10.4.7",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "framer-motion": "^10.11.5",
+    "iron-session": "^6.3.1",
     "next": "12.1.6",
     "postcss": "8.4.14",
     "react": "18.2.0",
@@ -29,5 +32,9 @@
   },
   "license": "ISC",
   "keywords": [],
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "prisma": "^4.11.0"
+  }
 }
