--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "10.4.7",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "dayjs": "^1.11.7",
     "framer-motion": "^10.11.5",
     "iron-session": "^6.3.1",
     "next": "12.1.6",
@@ -25,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.32.2",
+    "relative-time": "^1.0.0",
     "swr": "1.3.0",
     "tailwindcss": "3.1.3",
     "ts-node": "10.8.1",
