--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "12.1.6",
     "postcss": "8.4.14",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-hook-form": "7.32.2",
     "relative-time": "^1.0.0",
